Fix duplicate footer includes, update lazy loading instructions for images and add very basic dark mode support

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -5,8 +5,6 @@
 
 * {
   text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   font-kerning: auto;
 }
 
@@ -316,4 +314,11 @@ nav {
         width: 100%;
     }
 
+}
+
+/* Dark Mode */
+@media (prefers-color-scheme: dark) {
+    body{background:#191919;filter:invert(1);}
+    .highlight{border-color: grey !important;}
+    img,iframe,.highlight,a:hover,a:focus{filter:invert(1);}
 }
